<resources>
    <string name="app_name">WeatherAppLite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_title">Maribor...</string>
    <string name="hint">Maribor...</string>
    <string name="nov_vnos">Nov vnos</string>
    <string name="ime_lokacije">Kraj</string>
    <string name="temp">Temperatura</string>
    <string name="humidity">Vlaga</string>
    <string name="pressure">Pritisk</string>
    <string name="sunrise">Vzhod</string>
    <string name="sunset">Zahod</string>
    <string name="location">Kraj</string>
    <string name="day">Dan</string>
    <string name="maxTemp">Max</string>
    <string name="minTemp">Min</string>
</resources>
