<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/forecastItemHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:minHeight="200dp"
        app:cardBackgroundColor="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/day" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/cloud" />

            <TextView
                android:id="@+id/maxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/maxTemp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/minTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/minTemp"
                android:textSize="14sp" />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>